--- a/app/src/main/res/layout/fragment_colour_picker.xml
+++ b/app/src/main/res/layout/fragment_colour_picker.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/circleLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,9 +9,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="za.co.crsnyders.neogps.ColourPicker$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
+
+    <EditText
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/ledNumber"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="24" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Make Circle"
+        android:id="@+id/go"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:clickable="true" />
+
 
 </RelativeLayout>
