added rotation bar

--- a/app/src/main/res/layout/fragment_colour_picker.xml
+++ b/app/src/main/res/layout/fragment_colour_picker.xml
@@ -29,14 +29,23 @@
         android:layout_alignParentEnd="true"
         android:clickable="true" />
 
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar"
+        android:layout_below="@+id/ledNumber"
+        android:layout_centerHorizontal="true" />
+
     <FrameLayout
         android:id="@+id/circleLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/go"></FrameLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/seekBar">
+
+    </FrameLayout>
 
 
 </RelativeLayout>
