--- a/app/src/main/res/menu/menu_colour_picker.xml
+++ b/app/src/main/res/menu/menu_colour_picker.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+	<item
+		android:id="@+id/some_settings"
+		android:orderInCategory="150"
+		android:title="@string/some_action"
+		app:showAsAction="never"/>
 </menu>
